[gd_scene load_steps=13 format=3 uid="uid://dx2iw8yrrnnxl"]

[ext_resource type="Script" uid="uid://dfhugii2gimbs" path="res://scenes/ui/menus/main_menu.gd" id="1_y4aia"]
[ext_resource type="FontFile" uid="uid://jetf8jjakm1d" path="res://assets/fonts/font.ttf" id="2_oj1oe"]
[ext_resource type="Texture2D" uid="uid://conrxk6h466g2" path="res://assets/ui/main_menu_bg.png" id="2_y4aia"]
[ext_resource type="Texture2D" uid="uid://qh61w2n2t8i5" path="res://assets/ui/main_menu_sky.png" id="3_dhmlp"]
[ext_resource type="Texture2D" uid="uid://dy2ia7776jijy" path="res://assets/ui/main_menu_framething.png" id="4_y4aia"]
[ext_resource type="Texture2D" uid="uid://c767hbqgdlgth" path="res://assets/ui/main_menu_clouds.png" id="4_ykpw6"]
[ext_resource type="Texture2D" uid="uid://c8jd2wkqquu47" path="res://assets/ui/button_exit.png" id="5_dhmlp"]
[ext_resource type="Texture2D" uid="uid://g8nwpq4tjr72" path="res://assets/ui/button_start.png" id="5_y4aia"]
[ext_resource type="Script" uid="uid://bjvawwoxf8x4d" path="res://scenes/ui/menus/clouds.gd" id="5_ykpw6"]
[ext_resource type="AudioStream" uid="uid://cgp00ai0ckr5r" path="res://assets/musics/mus_gmtk_menu_lp.ogg" id="7_y4aia"]
[ext_resource type="AudioStream" uid="uid://ce8ehsmgukiph" path="res://assets/sounds/ui/sfx_ui_gamestart.ogg" id="11_h4dpu"]

[sub_resource type="LabelSettings" id="LabelSettings_y4aia"]
font = ExtResource("2_oj1oe")

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_y4aia")

[node name="MusicPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_y4aia")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sky" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_dhmlp")

[node name="Clouds" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_ykpw6")
script = ExtResource("5_ykpw6")

[node name="Hills3" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_y4aia")

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="TextureRect2" type="TextureRect" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("4_y4aia")

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Start" type="TextureButton" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("5_y4aia")
texture_pressed = ExtResource("5_y4aia")
texture_hover = ExtResource("5_y4aia")
texture_disabled = ExtResource("5_y4aia")

[node name="Exit" type="TextureButton" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("5_dhmlp")
texture_pressed = ExtResource("5_dhmlp")
texture_hover = ExtResource("5_dhmlp")
texture_disabled = ExtResource("5_dhmlp")

[node name="Label" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
text = "A game by Crowbytee, Kazoya, Mina, 
Verbaudet, XavierGd, and Yolwoocle"
label_settings = SubResource("LabelSettings_y4aia")

[node name="Label2" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -232.0
offset_top = 9.0
offset_right = 232.0
offset_bottom = 32.0
grow_horizontal = 2
text = "Made for GMTK Game jam 2025"
label_settings = SubResource("LabelSettings_y4aia")

[node name="TransitionSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_h4dpu")

[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/Start" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
